# humanizer-next

./: .eslintrc.json  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .vale.ini  AGENTS.md  AUTONOMOUS_EXECUTION_SUMMARY.md  CONTRIBUTING.md  LICENSE  QWEN.md  README.md  SECURITY.md  SKILL.md  SKILL_PROFESSIONAL.md  eslint.config.js  issue_10.txt  issue_13.txt  issue_15.txt  issue_16.txt  issue_2.txt  issues.json  issues_summary.txt  list.txt  open_issues.json  package-lock.json  package.json  patterns_out.txt  pr11.diff  pr11.json  pr3.json  pr4.json  pr5.json  pyproject.toml  renovate.json  router_out.txt  simple_test.js  smithery.yaml  test-integration-references.json  test_log_final_v2.txt  (+3 more)
.changeset/: humanizer-next-docs.md  reasoning-failures-stream.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: actionlint.yml  ci.yml  codeql.yml  release.yml  self-improvement.yml  skill-distribution.yml
adapters/: VERSIONING.md
adapters/amp/: SKILL.md
adapters/antigravity-rules-workflows/: README.md
adapters/antigravity-skill/: README.md  SKILL.md  SKILL_PROFESSIONAL.md
adapters/claude/: SKILL.md
adapters/cline/: SKILL.md
adapters/codex/: CODEX.md
adapters/copilot/: COPILOT.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: RALPH_LOOP_WORKFLOW.md  SELF_IMPROVEMENT_WORKFLOW.md  TAXONOMY_CHANGELOG.md  awesome-agent-entry.md  conflict-resolution-rules.md  deferred-claims-reasoning-failures.md  follow-on-track-recommendations.md  install-matrix.md  reasoning-failures-research-log.md  reasoning-failures-taxonomy.md  release-decision-gate.md  skill-distribution.md
scripts/: __init__.py  archive_track.js  check-sync-clean.js  check-upstream.js  close-upstream-issues.js  compile-skill.js  complete_workflow.js  convert-adapter.js  gather-repo-data.js  install-adapters.cmd  install-adapters.js  install-adapters.ps1  install-copilot.js  install-mcp-server.js  install_adapters.py  lint-markdown.js  progress_to_next_track.js  render-self-improvement-issue.js  run-node-tests.js  run-tests.js  sync-adapters.cmd  sync-adapters.js  sync-adapters.ps1  sync_adapters.py  test-skills.cjs  validate-adapters.cmd  validate-adapters.js  validate-adapters.ps1  validate-docs.js  validate-manifest.js  validate-skill.sh  validate_adapters.py
src/: ai_feature_matrix.csv  ai_features_sources_table.md  core_frontmatter.yaml  core_patterns.md  human_header.md  pattern_matrix.md  pro_header.md  research_references.md
test/: golden-set.test.js  manifest-validation.test.js  patterns.test.js  reasoning-stream-regression.test.js  router.test.js  sample-citations.json  taxonomy-enforcement.test.js
tests/: __init__.py  test_install_adapters.py  test_sync_adapters.py  test_validate_adapters.py
(+197 files in other folders)
